--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: custom_textformfield
+name: custom_formfield
 description: A new Flutter package project.
 version: 0.0.1
 homepage: https://github.com/blaqshyd/custom_formfield
