README.md modified

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: custom_formfield
-description: A new Flutter package project.
+description: A customizable widget for easier and better implementation for the textformfield.
 version: 0.0.1
 homepage: https://github.com/blaqshyd/custom_formfield
 repository: https://github.com/blaqshyd/custom_formfield
