--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
-name: custom_formfield
-description: A customizable widget for easier and better implementation for the textformfield.
+name: my_formfield
+description: A myizable widget for easier and better implementation for the textformfield.
 version: 0.0.1
-homepage: https://github.com/blaqshyd/custom_formfield
-repository: https://github.com/blaqshyd/custom_formfield
+homepage: https://github.com/blaqshyd/my_formfield
+repository: https://github.com/blaqshyd/my_formfield
 
 environment:
   sdk: '>=2.18.5 <3.0.0'
@@ -34,7 +34,7 @@ flutter:
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
-  # To add custom fonts to your package, add a fonts section here,
+  # To add my fonts to your package, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
@@ -52,4 +52,4 @@ flutter:
   #         weight: 700
   #
   # For details regarding fonts in packages, see
-  # https://flutter.dev/custom-fonts/#from-packages
+  # https://flutter.dev/my-fonts/#from-packages
